# battery-share-app

./: README.md
backend/: .gitignore  dump.rdb  package-lock.json  package.json  pyproject.toml  server.ts  tsconfig.json
backend/src/: app.py
backend/src/db/: connectRedis.ts
backend/src/delivery/request/: route.ts
backend/src/driver/route/: route.ts
backend/src/route/: solana.ts
backend/src/user/profile/: route.ts
blockchain/programs/battery_sharing/: Cargo.toml
frontend/: .env.example  next.config.mjs  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/_utils/: next-auth-optios.ts
frontend/src/app/arrived/: page.tsx
frontend/src/app/complete-delivery/: page.tsx
frontend/src/app/confirm-registration/: page.tsx
frontend/src/app/driver-arrived/: page.tsx
frontend/src/app/driver-complete-delivery/: page.tsx
frontend/src/app/driver-details/: page.tsx
frontend/src/app/driver-offer-delivery/: page.tsx
frontend/src/app/driver-pickup/: page.tsx
frontend/src/app/driver-rating/: page.tsx
frontend/src/app/driver-registration/: page.tsx
frontend/src/app/login/: layout.tsx  page.tsx
frontend/src/app/offer-confirm/: page.tsx
frontend/src/components/: commute-cargo-delivery-completion.tsx  commute-cargo-delivery-navigation.tsx  commute-cargo-delivery-request.tsx  commute-cargo-driver-offer-screen.tsx  commute-cargo-driver-registration-confirmation.tsx  commute-cargo-home-screen.tsx  commute-cargo-offer-accepted-screen.tsx  commute-cargo-pickup-navigation.tsx
(+33 files in other folders)
