[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vb-y-suhara <suhara.yuka@vbest.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^5.0.0"
solana = "^0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
